fixed typo in navbar
Signed-off-by: Reed Shipley <reedbshipley@gmail.com>

--- a/content/sitemap.org
+++ b/content/sitemap.org
@@ -1,6 +1,6 @@
 * [[file:writing.org][(2024-08-11) writing]]
 (No preview)
-* [[file:portfolio.org][(2024-08-11) Reed Shipley]]
+* [[file:index.org][(2024-08-11) Reed Shipley]]
 (No preview)
 * [[file:about.org][(2024-08-11) Reed Shipley Resume]]
 (No preview)
