Working commit of second case study entry

--- a/content/writing.org
+++ b/content/writing.org
@@ -2,5 +2,6 @@
 
 Here you'll find some writings in the order they were written, with the most recent at the top. All works within are my own personal opinion and do not reflect the opinions of my employers, sponsors, family, friends, or even acquaintences.
 
+- [[file:02 - Tracking identity in video.org][Judo and Deep Learning: 02 Tracking Identity in Video]]
 - [[file:01 - detecting judoka.org][Judo and Deep Learning: 01 Detecting Judoka]]
 - [[file:judo and deep learning.org][Judo and Deep Learning]]
